--- a/src/app/pages/productsList/productsList.component.html
+++ b/src/app/pages/productsList/productsList.component.html
@@ -42,7 +42,7 @@
                         <div class="col-md-4 col-sm-4">
                         <div class="card card-product card-plain">
                            <div class="card-image">
-                              <a [routerLink]="['/trabalho', 1]"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
+                              <a [routerLink]="['/trabalho', product._id]"><img alt="Rounded Image" class="img-rounded img-responsive" src="./assets/img/trabalho1.jpg"></a>
                               <div class="card-body">
                                  <div class="card-description">
                                     <h5 class="card-title">{{ product.title }}</h5>
@@ -52,8 +52,8 @@
                                  </div>
                               </div>
                            </div>
-                           <button type="button" class="btn btn-outline-default btn-round btn-sm col-md-4 ml-auto mr-auto"
-                           [routerLink]="['/atualizar-trabalho', 1]">Editar</button>
+                           <button *ngIf="user.get('token') && user.get('permissions') && userPermissions.includes('update:product')" type="button" class="btn btn-outline-default btn-round btn-sm col-md-4 ml-auto mr-auto"
+                           [routerLink]="['/atualizar-trabalho', product._id]">Editar</button>
                         </div>
                      </div>
                      </ng-container>
@@ -64,85 +64,95 @@
       </div>
    </div>
    <div #encomenda class="section landing-section">
-      <div class="container">
-          <div class="row">
-              <div class="col-md-8 mr-auto ml-auto">
-                  <h2 class="text-center">Tem um projeto para imprimir?</h2>
-                  <h3 class="text-center">Faça um orçamento</h3>
-                  <form class="contact-form" [formGroup]="orderForm" (ngSubmit)="createOrder()">
-                      <div class="row">
-                          <div class="col-md-6">
-                              <label>Nome</label>
-                              <span *ngIf="(orderForm.controls['name'].invalid && (orderForm.controls['name'].dirty || orderForm.controls['name'].touched)) && orderForm.controls['name'].errors.required" class="text-danger"> é obrigatório.</span>
-                              <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
-                                  <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
-                                  </div>
-                                  <input name="name" formControlName="name" type="text" class="form-control" placeholder="Seu nome" (focus)="focus=true" (blur)="focus=false" required="required">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 mr-auto ml-auto">
+                <h2 class="text-center">Tem um projeto para imprimir?</h2>
+                <h3 class="text-center">Faça um orçamento</h3>
+                <form class="contact-form" [formGroup]="orderForm" (ngSubmit)="createOrder()">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label>Nome</label>
+                            <span *ngIf="(orderForm.controls['clientName'].invalid && (orderForm.controls['clientName'].dirty || orderForm.controls['clientName'].touched)) && orderForm.controls['clientName'].errors.required" class="text-danger"> é obrigatório.</span>
+                            <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text"><i class="nc-icon nc-single-02"></i></span>
+                                </div>
+                                <input name="clientName" formControlName="clientName" type="text" class="form-control" placeholder="Seu nome" (focus)="focus=true" (blur)="focus=false" required="required">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <label>Email</label>
+                                <span *ngIf="(orderForm.controls['clientEmail'].invalid && (orderForm.controls['clientEmail'].dirty || orderForm.controls['clientEmail'].touched)) && orderForm.controls['clientEmail'].errors.required" class="text-danger"> é obrigatório.</span>
+                            <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
+                                </div>
+                                <input name="clientEmail" formControlName="clientEmail" type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <label>Whatsapp</label>
+                            <span *ngIf="(orderForm.controls['clientPhone'].invalid && (orderForm.controls['clientPhone'].dirty || orderForm.controls['clientPhone'].touched)) && orderForm.controls['clientPhone'].errors.required" class="text-danger"> é obrigatório.</span>
+                            <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
+                                <div class="input-group-prepend">
+                                  <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
+                                </div>
+                                <input mask="(00) 00000-0000" name="clientPhone" formControlName="clientPhone" type="text" class="form-control" placeholder="(DDD) Número" (focus)="focus1=true" (blur)="focus1=false" >
+                            </div>
+                        </div>
+                    
+                    
+                    <div class="col-md-8">
+                        <label>Tem imagens ou um modelo 3D?</label>
+                        <div>
+                            <input style="display: none;" (change)="uploadFile($event)" type="file" multiple
+                                    class="form-control-file" #onUpload>
+                            <button type="button" (click)="onUpload.click()" class="btn btn-danger btn-fill btn-sm">Fazer upload</button>
+                        </div>
+                        <div  class="mt-1 col-md-12 row">
+                            <div *ngFor="let file of filesToUpload; ; let i=index" class="m-2 mr-4">
+                                <div class="info">
+                                    <i class="icon nc-icon nc-app"></i> 
+                                </div>
+                                    <p>{{ file.fileName }}</p>
+                                    <a (click)="removeFile(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
+                            </div>
+                        </div>
+                        <div  class="mt-1 col-md-12 row">
+                            <div *ngFor="let image of imagesToUpload; ; let i=index" class="m-2 mr-4">
+                                <div class="info">
+                                    <i class="icon nc-icon nc-image"></i> 
+                                </div>
+                                    <p>{{ image.fileName }}</p>
+                                    <a (click)="removeImage(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                    <label>Conte sobre o seu projeto, iremos adorar poder tirar as suas ideias do papel!!!</label>
+                    <textarea name="notes" formControlName="notes" class="form-control" rows="4" placeholder="Nos diga o que está planejando..."></textarea>
+                    <div class="row">
+                        <div class="col-md-12 mr-auto ml-auto">
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input name="allowContact" formControlName="allowContact" class="form-check-input" type="checkbox" value=""> De acordo com as Leis 12.965/2014 e 13.709/2018, que regulam o uso da internet e tratamento de dados pessoais no Brasil, ao solicitar o serviço autorizo &lt;BeMaker&gt; a entrar em contato por e-mail e Whatsapp e concordo com a sua política de privacidade.  
+                                    <span class="form-check-sign"></span>
+                                </label>
+                            </div>
+                            <button type="submit" class="btn btn-danger btn-lg btn-fill">Fazer orçamento</button>
+                            <div *ngIf="loading==true" id="loading-wrapper">
+                                <div id="loading-text">Enviando</div>
+                                <div id="loading-content"></div>
                               </div>
-                          </div>
-                          <div class="col-md-6">
-                              <label>Email</label>
-                                  <span *ngIf="(orderForm.controls['email'].invalid && (orderForm.controls['email'].dirty || orderForm.controls['email'].touched)) && orderForm.controls['email'].errors.required" class="text-danger"> é obrigatório.</span>
-                              <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
-                                  <div class="input-group-prepend">
-                                    <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
-                                  </div>
-                                  <input name="email" formControlName="email" type="text" class="form-control" placeholder="Email" (focus)="focus1=true" (blur)="focus1=false" >
-                              </div>
-                          </div>
-                          <div class="col-md-6">
-                              <label>Whatsapp</label>
-                              <span *ngIf="(orderForm.controls['clientPhone'].invalid && (orderForm.controls['clientPhone'].dirty || orderForm.controls['clientPhone'].touched)) && orderForm.controls['clientPhone'].errors.required" class="text-danger"> é obrigatório.</span>
-                              <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
-                                  <div class="input-group-prepend">
-                                    <span class="input-group-text">  <i class="nc-icon nc-email-85"></i></span>
-                                  </div>
-                                  <input name="clientPhone" formControlName="clientPhone" type="text" class="form-control" placeholder="DDD + Número" (focus)="focus1=true" (blur)="focus1=false" >
-                              </div>
-                          </div>
-                      
-                      
-                      <div class="col-md-8">
-                          <label>Tem imagens ou um modelo 3D?</label>
-                          <div>
-                              <input style="display: none;" (change)="uploadFile($event)" type="file" multiple
-                                      class="form-control-file" #onUpload>
-                              <button type="button" (click)="onUpload.click()" class="btn btn-danger btn-fill btn-sm">Fazer upload</button>
-                          </div>
-                          <div  class="mt-3 col-md-12 row">
-                              <div *ngFor="let file of filesToUpload; ; let i=index" class="m-2 mr-4">
-                                  <div class="info">
-                                      <i class="icon nc-icon nc-app"></i> 
-                                  </div>
-                                      <p>{{ file.fileName }}</p>
-                                      <a (click)="removeFile(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
-                              </div>
-                          </div>
-                          <div  class="mt-3 col-md-12 row">
-                              <div *ngFor="let image of imagesToUpload; ; let i=index" class="m-2 mr-4">
-                                  <div class="info">
-                                      <i class="icon nc-icon nc-image"></i> 
-                                  </div>
-                                      <p>{{ image.fileName }}</p>
-                                      <a (click)="removeImage(i)"><i class="icon icon-danger nc-icon nc-simple-remove"></i></a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <br>
-                      <label>Conte sobre o seu projeto, iremos adorar poder tirar as suas ideias do papel!!!</label>
-                      <textarea name="notes" formControlName="notes" class="form-control" rows="4" placeholder="Nos diga o que está planejando..."></textarea>
-                      <div class="row">
-                          <div class="col-md-4 mr-auto ml-auto">
-                              <button [disabled]="disabledSubmitButton" type="submit" class="btn btn-danger btn-lg btn-fill">Fazer orçamento</button>
-                          </div>
-                      </div>
-                  </form>
-              </div>
-          </div>
-      </div>
-  </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 
 
       
