--- a/src/app/pages/updateProduct/updateProduct.component.html
+++ b/src/app/pages/updateProduct/updateProduct.component.html
@@ -97,7 +97,7 @@
                      <div class="col-md-4 mt-3">
                         <h6>Peso embalado</h6>
                         <div class="input-group border-input"><input
-                              type="text" value="0,2" placeholder="Em KG Max 1KG" class="form-control border-input">
+                              type="text" value="0,2" placeholder="Em KG" class="form-control border-input">
                            <div class="input-group-append"><span
                                  class="input-group-text"></span></div>
                         </div>
