--- a/src/app/pages/createProduct/createProduct.component.scss
+++ b/src/app/pages/createProduct/createProduct.component.scss
@@ -7,3 +7,16 @@ html {
     width: 100px;
     object-fit: contain;
 }
+
+.spin {
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotateZ(0);
+  }
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
