--- a/src/app/pages/updateProduct/updateProduct.component.html
+++ b/src/app/pages/updateProduct/updateProduct.component.html
@@ -217,7 +217,7 @@
                <div class="col-md-4 col-sm-4 m-auto"><button type="button"
                      class="btn btn-outline-danger btn-block btn-round">Cancelar</button></div>
                <div class="col-md-4 col-sm-4 m-auto"><button type="submit"
-                     class="btn btn-outline-primary btn-block btn-round">Salvar</button></div>
+                     class="btn btn-outline-primary btn-block btn-round">Atualizar</button></div>
             </div>
          </form>
          </div>
