--- a/src/app/pages/updateProduct/updateProduct.component.scss
+++ b/src/app/pages/updateProduct/updateProduct.component.scss
@@ -2,6 +2,12 @@ html {
     scroll-behavior: smooth;
   }
 
+  img {
+    height: 100px;
+    width: 100px;
+    object-fit: contain;
+}
+
   #loading-wrapper {
     position: fixed;
     width: 100%;
